--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Сложно сосредоточиться</title>
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
-    <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/light.css" />
@@ -23,7 +23,7 @@
             <button
               class="header__theme-menu-button header__theme-menu-button_type_light"
             >
-              День
+              день
             </button>
           </li>
           <li class="header__theme-menu-item">
@@ -31,14 +31,14 @@
               class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
               disabled
             >
-              Авто
+              авто
             </button>
           </li>
           <li class="header__theme-menu-item">
             <button
               class="header__theme-menu-button header__theme-menu-button_type_dark"
             >
-              Неон
+              неон
             </button>
           </li>
         </ul>
@@ -49,7 +49,7 @@
       <h1 class="header__title">no focus</h1>
 
       <p class="header__description title-decor">
-        Что делать, когда не можешь делать ничего Или почему нам так сложно
+        Что делать, когда не можешь делать ничего <br> Или почему нам так сложно
         сконцентрироваться, особенно когда очень надо
       </p>
     </header>
