--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Сложно сосредоточиться</title>
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link
+      rel="apple-touch-icon"
+      href="images/mobile-icon.png"
+      type="image/png"
+    />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
@@ -66,7 +71,7 @@
             важные. Где же легендарная многозадачность, когда она так нужна вам
             (и всем нанимающим менеджерам этого мира)? А дело в том, что её
             просто не существует. Исследователи
-            <a href="https://dana.org/article/multicosts-of-multitasking/"
+            <a class="link" href="https://dana.org/article/multicosts-of-multitasking/"
               >выяснили</a
             >, что мозгу тяжело концентрироваться даже на двух делах
             одновременно. А когда в поле внимания попадает несколько важных
@@ -172,7 +177,7 @@
               </h5>
               <p class="content__block-item-text">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-                <a
+                <a class="link"
                   href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
                   >показал</a
                 >, что созерцание природы повышает концентрацию, в то время как
