--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       <h1 class="header__title">no focus</h1>
 
       <p class="header__description title-decor">
-        Что делать, когда не можешь делать ничего <br> Или почему нам так сложно
-        сконцентрироваться, особенно когда очень надо
+        Что делать, когда не можешь делать ничего <br />
+        Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </p>
     </header>
 
@@ -71,7 +71,9 @@
             важные. Где же легендарная многозадачность, когда она так нужна вам
             (и всем нанимающим менеджерам этого мира)? А дело в том, что её
             просто не существует. Исследователи
-            <a class="link" href="https://dana.org/article/multicosts-of-multitasking/"
+            <a
+              class="link"
+              href="https://dana.org/article/multicosts-of-multitasking/"
               >выяснили</a
             >, что мозгу тяжело концентрироваться даже на двух делах
             одновременно. А когда в поле внимания попадает несколько важных
@@ -177,7 +179,8 @@
               </h5>
               <p class="content__block-item-text">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-                <a class="link"
+                <a
+                  class="link"
                   href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
                   >показал</a
                 >, что созерцание природы повышает концентрацию, в то время как
