--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <button
               class="header__theme-menu-button header__theme-menu-button_type_light"
             >
-              день
+              День
             </button>
           </li>
           <li class="header__theme-menu-item">
@@ -36,14 +36,14 @@
               class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
               disabled
             >
-              авто
+              Авто
             </button>
           </li>
           <li class="header__theme-menu-item">
             <button
               class="header__theme-menu-button header__theme-menu-button_type_dark"
             >
-              неон
+              Неон
             </button>
           </li>
         </ul>
