--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 
     <main class="content">
       <section class="content__top">
-        <h3 class="content__top-title content__title">
+        <h2 class="content__top-title content__title">
           Почему сосредоточиться так сложно
-        </h3>
+        </h2>
         <div class="content__block">
-          <h4 class="content__block-title title-decor">Многозадачность</h4>
+          <h3 class="content__block-title title-decor">Многозадачность</h3>
           <p class="content__block-text">
             Особенно сложно сосредоточиться, когда задач много и все они —
             важные. Где же легендарная многозадачность, когда она так нужна вам
@@ -83,7 +83,7 @@
           </p>
         </div>
         <div class="content__block">
-          <h4 class="content__block-title title-decor">Дофамин</h4>
+          <h3 class="content__block-title title-decor">Дофамин</h3>
           <p class="content__block-text">
             С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
             невозможности сосредоточиться замешана и полная противоположность
@@ -98,11 +98,11 @@
       </section>
 
       <section class="content__central">
-        <h3 class="content__central-title content__title">
+        <h2 class="content__central-title content__title">
           Что снижает концентрацию внимания?
-        </h3>
+        </h2>
         <div class="content__block">
-          <h4 class="content__block-title title-decor">Многозадачность</h4>
+          <h3 class="content__block-title title-decor">Многозадачность</h3>
           <p class="content__block-text">
             Как концентрация может снижаться из-за… концентрации? Любая
             стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
@@ -113,7 +113,7 @@
           </p>
         </div>
         <div class="content__block">
-          <h4 class="content__block-title title-decor">Еда</h4>
+          <h3 class="content__block-title title-decor">Еда</h3>
           <p class="content__block-text">
             «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
             доставляют в мозг энергию и помогают ему лучше работать. Но уходит
@@ -124,7 +124,7 @@
           </p>
         </div>
         <div class="content__block">
-          <h4 class="content__block-title title-decor">Гаджеты</h4>
+          <h3 class="content__block-title title-decor">Гаджеты</h3>
           <p class="content__block-text">
             Да-да, это та самая ситуация, когда на экране ноутбука — код, в
             наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
@@ -138,19 +138,19 @@
       </section>
 
       <section class="content__bottom">
-        <h3 class="content__bottom-title content__title">
+        <h2 class="content__bottom-title content__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
-        </h3>
+        </h2>
         <div class="content__block">
-          <h4 class="content__block-title title-decor">
+          <h3 class="content__block-title title-decor">
             5 простых (на самом деле не очень) советов
-          </h4>
+          </h3>
           <ul class="content__block-list">
             <li class="content__block-item">
-              <h5 class="content__block-item-title title-decor">
+              <h4 class="content__block-item-title title-decor">
                 Представьте небо и облака
-              </h5>
+              </h4>
               <p class="content__block-item-text">
                 Или листья в ручье. Тут дело в лёгкой медитации, которая
                 помогает успокоиться. Ведь часто именно тревожные мысли о
@@ -163,9 +163,9 @@
               </p>
             </li>
             <li class="content__block-item">
-              <h5 class="content__block-item-title title-decor">
+              <h4 class="content__block-item-title title-decor">
                 Включите музыку
-              </h5>
+              </h4>
               <p class="content__block-item-text">
                 Но не любую, и не любимую. Любимая может быть связана с сильными
                 положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -174,9 +174,9 @@
               </p>
             </li>
             <li class="content__block-item">
-              <h5 class="content__block-item-title title-decor">
+              <h4 class="content__block-item-title title-decor">
                 Прогуляйтесь
-              </h5>
+              </h4>
               <p class="content__block-item-text">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
                 <a
@@ -192,9 +192,9 @@
               </p>
             </li>
             <li class="content__block-item">
-              <h5 class="content__block-item-title title-decor">
+              <h4 class="content__block-item-title title-decor">
                 Хорошо ешьте
-              </h5>
+              </h4>
               <p class="content__block-item-text">
                 Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                 которые препятствуют резким скачкам сахара в крови. Например, с
@@ -204,7 +204,7 @@
               </p>
             </li>
             <li class="content__block-item">
-              <h5 class="content__block-item-title title-decor">Читайте</h5>
+              <h4 class="content__block-item-title title-decor">Читайте</h4>
               <p class="content__block-item-text">
                 Настоящие бумажные книги. Это правда помогает с концентрацией:
                 чтобы прочитать пост в соцсети, достаточно нескольких минут или
@@ -217,34 +217,34 @@
       </section>
 
       <section class="gallery">
-        <h4 class="gallery__title title-decor">А можно в картинках?</h4>
+        <h2 class="gallery__title title-decor">А можно в картинках?</h2>
         <div class="gallery__box">
           <img
-            class="gallery__img gallery__img-1"
+            class="gallery__img"
             src="./images/sunset.png"
             alt="Рассвет"
             loading="lazy"
           />
           <img
-            class="gallery__img gallery__img-2"
+            class="gallery__img"
             src="./images/ice-cream.png"
             alt="Мороженное"
             loading="lazy"
           />
           <img
-            class="gallery__img gallery__img-3"
+            class="gallery__img"
             src="./images/tape.png"
             alt="Лента"
             loading="lazy"
           />
           <img
-            class="gallery__img gallery__img-4"
+            class="gallery__img"
             src="./images/books.png"
             alt="Книги"
             loading="lazy"
           />
           <img
-            class="gallery__img gallery__img-5"
+            class="gallery__img"
             src="./images/street.png"
             alt="Улица"
             loading="lazy"
